main.css
/* ... */
button[type="submit"] {
  background-color: red;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

button[type="submit"]:hover {
  background-color: red;
}



header #bar:hover {
  color: red;
  transform: rotate(360deg);
}

header #bar {
  display: none;
  font-size: 2.7rem;
  margin-left: 10px;
}

.quote {
  margin-top: 2rem;
}

#btnScrollToTop {
  position: fixed;
  right: 10px;
  bottom: 17px;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: red;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
  color: #fff;
  border: none;
  outline: none;
  cursor: pointer;
  transition: font-size 0.1s ease, width 0.3s ease, height 0.3s ease;
  display: flex;
  justify-content: center;
  align-items: center;
}

#btnScrollToTop a {
  color: white;
  font-size: 1.5rem;
  /* Adjust icon size */
  position: relative;
  top: 0px;
  /* left: 10px; */
  /* Adjust vertical position */
}

#btnScrollToTop a i {
  font-size: 2rem;
}

#btnScrollToTop:hover {
  font-size: 1.6rem;
}

.submit_btn {
  color: white;
}

.swiper-pagination-bullet-active {
  background: red !important;
}


.swiper-pagination-bullet {
  margin-top: 1000px;
}

.dishes .box-container {
  display: grid;
  padding-top: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
  gap: 4.5rem;
}

.dishes .box-container .box {
  height: 45rem;
  padding: 2.5 rem;
  background: white;
  border-radius: 2rem;
  border: 0.1rem solid rgba(0, 0, 0, 0.2);
  box-shadow: black;
  position: relative;
  overflow: hidden;
  text-align: center;
}

.dishes .box-container .food-card {
  height: 45rem;
  background-size: 55rem;
  border-radius: 2rem;
  border: 0.1rem solid rgba(0, 0, 0, 0.2);
  box-shadow: black;
  position: relative;
  overflow: hidden;
  text-align: center;
}

.center {
  margin: auto;
  width: 90%;
  padding: 10px;
}

.dishes .box-container .food-card .food-content {
  position: relative;
  height: 30rem;
  padding: 1rem;
  background-color: rgba(255, 255, 255, 0.9);
  border-radius: 2rem;
  cursor: pointer;
  transform: translateY(33rem);
  transition: transform 0.3s;
}

.dishes .box-container .food-card .food-content::before {
  content: '';
  position: absolute;
  top: -2rem;
  right: -2rem;
  display: block;
  border-radius: 50%;
  box-shadow: inset -5rem -5rem #ffff;
}

@media (pointer: fine) {
  .non-touch {
    display: block;
  }

  .touch {
    display: none;
  }
}


@media (pointer: coarse) {
  .touch {
    display: block;
  }

  .non-touch {
    display: none;
  }
}

@media (min-width: 1050px) {
  .touch {
    display: none;
  }

  .non-touch {
    display: block;
  }
}

.dishes .box-container .food-card:hover .food-content {
  transform: translateY(50%);
  /* Adjust the value as needed */
}


.dishes .box-container .food-card .food-content:hover {
  transform: translateY(50%);
}


.stars {
  padding: 1rem 0;
}

.stars i {
  font-size: 1.7rem;
  color: red;
}

.stars {
  padding: 1rem 0;
}

.stars i {
  font-size: 1.7rem;
  color: red;
}

#fish-tacos {
  background-image: url("images/menu images/American Cuisine/fish tacos, $7.99.jpg");
}

.food-title h3 {
  color: red;
}

.food-sub {
  padding-top: -2rem;
  padding-bottom: 2rem;
  font-size: 12px;
}

@media (max-width: 900px) {
  .tiny-food-sub {
    font-size: 20px !important;
  }
}


.dishes .box-container .box img {
  height: 16rem;
  margin: 1rem 0;
  margin-top: 27px;
  border-radius: 10px;
  overflow: hidden;
}

.dishes .box-container .box p {
  font-size: 2rem;
  text-align: center;
  padding-bottom: 2.5rem;
  margin-left: 20px;
  margin-right: 20px;
}

.dishes .box-container .box h3 {
  color: black;
  font-size: 2.5rem;
}


.dishes .box-container .box a .span {
  color: red;
  font-weight: bolder;
  margin-right: 1rem;
  font-size: 2.5rem;
}

.dishes .box-container .box a:hover {
  letter-spacing: 0.25rem;
}

.home .home-slider {
  height: 650px;
  overflow: hidden;
}

.home .home-slider .slide {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 2rem;
  padding-top: 9rem;
  height: 100%;
}

.home .home-slider .slide .content {
  flex: 1 1 45rem;
}

.home .home-slider .slide .image {
  flex: 1 1 45rem;
  height: 100%;
}

.home .home-slider .slide .image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
  max-height: 100%;
  max-width: 100%;
}

.benefits-page {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: sans-serif;
  width: 100%;
  min-height: 100vh;
}

.benefits-container {
  width: 80%;
  display: block;
  margin: auto;
  padding: 20px;
}

.title {
  text-align: center;
  font-size: 45px;
  font-weight: bold;
  margin-bottom: 70px;
  margin-top: 4rem;
}

.benefits-content {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

.benefits-image1 {
  flex: 1;
  margin-right: 20px;
  overflow: hidden;
  border-radius: 10px;
}

.benefits-image1 img {
  width: 100%;
  transition: transform 0.3s ease;
}

.benefits-image1:hover img {
  transform: scale(1.1);
}

.why-us-content {
  flex: 1;
  margin-left: 20px;
}


.why-us-content p {
  font-size: 17px;
  line-height: 1.6;
}

.learn-more {
  margin-top: 20px;
  display: inline-block;
  padding: 10px 20px;
  border: 1px solid red;
  color: #000;
  transition: 0.3s ease;
  font-size: 17px;
  text-decoration: none;
  font-weight: bold;
  border-radius: 10px;
}


.learn-more:hover {
  background-color: red;
}


.home .home-slider .slide .content span {
  color: red;
  font-size: 2.5rem;
  line-height: 0.8rem;
}

.home .home-slider .slide .content h3 {
  color: black;
  font-size: 6.5rem;
}

.home .home-slider .slide .content p {
  color: black;
  font-size: 1.9rem;
  padding: 0.5rem 0;
  line-height: 2.8rem;
  letter-spacing: 0.1rem;
}

.services {
  margin: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}
/* ... */

